--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <div class="card-stacked">
                             <div class="card-content">
                                 <p>
-                                    Za podjetje spinalis varimo kovinske dele za njihove ergonomične stole.
+                                    Za podjetje Spinalis varimo kovinske dele za njihove ergonomične stole.
                                 </p>
                             </div>
                         </div>
@@ -168,7 +168,7 @@
                         <div class="card-stacked">
                             <div class="card-content">
                                 <p>
-                                    Za podjetje Kata izdelujemo regale, mize, in drugo opremo za nakupovalne centre.
+                                    Za podjetje Kata izdelujemo regale, mize in drugo opremo za nakupovalne centre.
                                 </p>
                             </div>
                         </div>
@@ -210,7 +210,7 @@
                         <div class="card-stacked">
                             <div class="card-content">
                                 <p>
-                                    S podjetjem Trol sodelujemo že od svoje ustanovitve. Z njimi sodelujemo pri uresničevanju večjih projektov(stopnice, luči, oprema igralnic).
+                                    S podjetjem Trol sodelujemo že od svoje ustanovitve. Z njimi sodelujemo pri uresničevanju večjih projektov (stopnice, luči, oprema igralnic).
                                 </p>
                             </div>
                         </div>
