--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Šifrer d.o.o. - Specialisti za varjenje</title>
+    <title>Šifrer, d.o.o. - Specialisti za varjenje</title>
 
-    <meta name="description" content="Šifrer d.o.o., proizvodnja in storitve - Specialisti za varjenje">
+    <meta name="description" content="Šifrer, d.o.o., proizvodnja in storitve - Specialisti za varjenje">
     <meta name="keywords" content="varjenje, šifrer doo, varilec, izdelava kovinskih izdelkov, šifrer, sifrer, sifrer doo, jeklene konstrukcije, specialisti, proizvodnja, polizdelki">
 
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
@@ -18,6 +18,41 @@
     <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+    <script>
+        window.addEventListener("load", function(){
+            window.cookieconsent.initialise({
+                palette: {
+                    popup: {
+                        background: "#000"
+                    },
+                    button: {
+                        background: "#ffeb3b"
+                    },
+                },
+                showLink: false,
+                content: {
+                    message: "Naša spletna stran uporablja piškotke za potrebe spletne analitike.",
+                    dismiss: "Vredu"
+                },
+                theme: "edgeless"
+            })
+        });
+    </script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117788862-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-117788862-1');
+    </script>
+
 </head>
 
 <body>
@@ -25,7 +60,7 @@
         <nav class="yellow">
             <div class="nav-wrapper container">
                 <a href="/" class="brand-logo black-text">
-                    <img alt="Šifrer d.o.o." src="images/logo_text.png">
+                    <img alt="Šifrer, d.o.o." src="images/logo_text.png" alt="Šifrer, d.o.o.">
                 </a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a class="black-text" href="#o-nas">O nas</a></li>
@@ -38,7 +73,7 @@
     </div>
     <div class="parallax-container">
         <div class="parallax">
-            <img src="images/welder.jpg">
+            <img src="images/welder.jpg" alt="Parallax welder">
         </div>
     </div>
     <div class="section yellow" id="o-nas">
@@ -61,14 +96,14 @@
             </div>
             <div class="col m3">
                 <div class="small-logo-pistol">
-                    <img alt="Šifrer d.o.o." src="images/logo_pistol.png">
+                    <img alt="Šifrer, d.o.o." src="images/logo_pistol.png" alt="Šifrer, d.o.o.">
                 </div>
             </div>
         </div>
     </div>
         <div class="parallax-container">
         <div class="parallax">
-            <img src="images/weld.jpg">
+            <img src="images/weld.jpg" alt="Parallax weld">
         </div>
     </div>
     <div class="section white" id="galerija">
@@ -76,27 +111,27 @@
             <h2 class="header center-align">Galerija</h2>
 
             <div class="galllery">
-                <a class="gallery-item" data-fancybox="gallery"  href="images/gallery/balkon_ograja.jpg" data-caption="Zunanja ograja #1"><img src="images/gallery/thumbs/balkon_ograja.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/ograja.jpg" data-caption="Zunanja ograja #2"><img src="images/gallery/thumbs/ograja.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/zunanja_ograja_1.jpg" data-caption="Zunanja ograja #3"><img src="images/gallery/thumbs/zunanja_ograja_1.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/zunanja_ograja_2.jpg" data-caption="Zunanja ograja #4"><img src="images/gallery/thumbs/zunanja_ograja_2.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/zunanja_ograja_3.jpg" data-caption="Zunanja ograja #5"><img src="images/gallery/thumbs/zunanja_ograja_3.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/zunanja_ograja_4.jpg" data-caption="Zunanja ograja #6"><img src="images/gallery/thumbs/zunanja_ograja_4.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/zunanja_ograja_5.jpg" data-caption="Zunanja ograja #7"><img src="images/gallery/thumbs/zunanja_ograja_5.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/zunanja_ograja_6.jpg" data-caption="Zunanja ograja #8"><img src="images/gallery/thumbs/zunanja_ograja_6.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/zunanja_ograja.jpg" data-caption="Zunanja ograja #9"><img src="images/gallery/thumbs/zunanja_ograja.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/invalidska_pot.jpg" data-caption="Zunanja ograja in dovoz za invalide"><img src="images/gallery/thumbs/invalidska_pot.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/notranja_ograja_1.jpg" data-caption="Notranja ograja #1"><img src="images/gallery/thumbs/notranja_ograja_1.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/notranja_ograja.jpg" data-caption="Notranja ograja #2"><img src="images/gallery/thumbs/notranja_ograja.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/ograja_mreza.jpg" data-caption="Notranja ograja #3"><img src="images/gallery/thumbs/ograja_mreza.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/stopnisce.jpg" data-caption="Stopnice z ograjo"><img src="images/gallery/thumbs/stopnisce.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/stopnice.jpg" data-caption="Zunanje stopnice"><img src="images/gallery/thumbs/stopnice.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/okvir.jpg" data-caption="Okvir"><img src="images/gallery/thumbs/okvir.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/omarica.jpg" data-caption="Pokrov za vzidljivo omarico"><img src="images/gallery/thumbs/omarica.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/podest.jpg" data-caption="Kovinski podest"><img src="images/gallery/thumbs/podest.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/sod.jpg"><img src="images/gallery/thumbs/sod.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/hisica.jpg" data-caption="Zunanja hišica za različne potrebe"><img src="images/gallery/thumbs/hisica.jpg"></a>
-                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/miza.jpg" data-caption="Alu miza za lokal"><img src="images/gallery/thumbs/miza.jpg"></a>
+                <a class="gallery-item" data-fancybox="gallery"  href="images/gallery/balkon_ograja.jpg" data-caption="Zunanja ograja #1"><img src="images/gallery/thumbs/balkon_ograja.jpg" alt="Zunanja ograja #1"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/ograja.jpg" data-caption="Zunanja ograja #2"><img src="images/gallery/thumbs/ograja.jpg" alt="Zunanja ograja #2"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/zunanja_ograja_1.jpg" data-caption="Zunanja ograja #3"><img src="images/gallery/thumbs/zunanja_ograja_1.jpg" alt="Zunanja ograja #3"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/zunanja_ograja_2.jpg" data-caption="Zunanja ograja #4"><img src="images/gallery/thumbs/zunanja_ograja_2.jpg" alt="Zunanja ograja #4"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/zunanja_ograja_3.jpg" data-caption="Zunanja ograja #5"><img src="images/gallery/thumbs/zunanja_ograja_3.jpg" alt="Zunanja ograja #5"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/zunanja_ograja_4.jpg" data-caption="Zunanja ograja #6"><img src="images/gallery/thumbs/zunanja_ograja_4.jpg" alt="Zunanja ograja #6"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/zunanja_ograja_5.jpg" data-caption="Zunanja ograja #7"><img src="images/gallery/thumbs/zunanja_ograja_5.jpg" alt="Zunanja ograja #7"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/zunanja_ograja_6.jpg" data-caption="Zunanja ograja #8"><img src="images/gallery/thumbs/zunanja_ograja_6.jpg" alt="Zunanja ograja #8"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/zunanja_ograja.jpg" data-caption="Zunanja ograja #9"><img src="images/gallery/thumbs/zunanja_ograja.jpg" alt="Zunanja ograja #9"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/invalidska_pot.jpg" data-caption="Zunanja ograja in dovoz za invalide"><img src="images/gallery/thumbs/invalidska_pot.jpg" alt="Zunanja ograja in dovoz za invalide"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/notranja_ograja_1.jpg" data-caption="Notranja ograja #1"><img src="images/gallery/thumbs/notranja_ograja_1.jpg" alt="Notranja ograja #1"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/notranja_ograja.jpg" data-caption="Notranja ograja #2"><img src="images/gallery/thumbs/notranja_ograja.jpg" alt="Notranja ograja #2"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/ograja_mreza.jpg" data-caption="Notranja ograja #3"><img src="images/gallery/thumbs/ograja_mreza.jpg" alt="Notranja ograja #3"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/stopnisce.jpg" data-caption="Stopnice z ograjo"><img src="images/gallery/thumbs/stopnisce.jpg" alt="Stopnice z ograjo"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/stopnice.jpg" data-caption="Zunanje stopnice"><img src="images/gallery/thumbs/stopnice.jpg" alt="Zunanje stopnice"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/okvir.jpg" data-caption="Okvir"><img src="images/gallery/thumbs/okvir.jpg" alt="Okvir"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/omarica.jpg" data-caption="Pokrov za vzidljivo omarico"><img src="images/gallery/thumbs/omarica.jpg" alt="Pokrov za vzidljivo omarico"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/podest.jpg" data-caption="Kovinski podest"><img src="images/gallery/thumbs/podest.jpg" alt="Kovinski podest"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/sod.jpg"><img src="images/gallery/thumbs/sod.jpg" alt="Sod"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/hisica.jpg" data-caption="Zunanja hišica za različne potrebe"><img src="images/gallery/thumbs/hisica.jpg" alt="Zunanja hišica za različne potrebe"></a>
+                <a class="gallery-item" data-fancybox="gallery" href="images/gallery/miza.jpg" data-caption="Alu miza za lokal"><img src="images/gallery/thumbs/miza.jpg" alt="Alu miza za lokal"></a>
             </div>
         </div>
     </div>
@@ -107,7 +142,7 @@
                 <div class="col m4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/partners/metaling.png">
+                            <img src="images/partners/metaling.png" alt="Metaling">
                         </div>
                         <div class="card-stacked">
                             <div class="card-content">
@@ -121,7 +156,7 @@
                 <div class="col m4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/partners/acies_bio.jpg">
+                            <img src="images/partners/acies_bio.jpg" alt="ACIES BIO">
                         </div>
                         <div class="card-stacked">
                             <div class="card-content">
@@ -135,7 +170,7 @@
                 <div class="col m4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/partners/simpss.gif">
+                            <img src="images/partners/simpss.png" alt="Simps'S">
                         </div>
                         <div class="card-stacked">
                             <div class="card-content">
@@ -149,7 +184,7 @@
                 <div class="col m4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/partners/spinalis.png">
+                            <img src="images/partners/spinalis.png" alt="Spinalis">
                         </div>
                         <div class="card-stacked">
                             <div class="card-content">
@@ -163,7 +198,7 @@
                 <div class="col m4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/partners/kata.png">
+                            <img src="images/partners/kata.png" alt="Kata">
                         </div>
                         <div class="card-stacked">
                             <div class="card-content">
@@ -177,7 +212,7 @@
                 <div class="col m4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/partners/bmw.png">
+                            <img src="images/partners/bmw.png" alt="BMW">
                         </div>
                         <div class="card-stacked">
                             <div class="card-content">
@@ -191,7 +226,7 @@
                 <div class="col m4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/partners/metrel.png">
+                            <img src="images/partners/metrel.png" alt="Metrel">
                         </div>
                         <div class="card-stacked">
                             <div class="card-content">
@@ -205,7 +240,7 @@
                 <div class="col m4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/partners/trol.png">
+                            <img src="images/partners/trol.png" alt="Trol">
                         </div>
                         <div class="card-stacked">
                             <div class="card-content">
@@ -219,7 +254,7 @@
                 <div class="col m4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/partners/ospg.gif">
+                            <img src="images/partners/ospg.png" alt="Osnovna Šola Polhov Gradec">
                         </div>
                         <div class="card-stacked">
                             <div class="card-content">
@@ -240,8 +275,8 @@
 
             <div class="row">
                 <div class="col m4">
-                    <p class="grey-text text-darken-3 lighten-3">
-                        Šifrer d.o.o.
+                    <div class="grey-text text-darken-3 lighten-3">
+                        Šifrer, d.o.o.
                         <br>
                         Setnik 11a
                         <br>
@@ -251,10 +286,10 @@
                         Matična št: 5909252000
                         <br>
                         Davčna št: 51450526
-                    </p>
+                    </div>
                 </div>
                 <div class="col m5">
-                    <p class="grey-text text-darken-3 lighten-3">
+                    <div class="grey-text text-darken-3 lighten-3">
                         <div class="footer-icon-wrapper">
                             <i class="material-icons">email</i> <a href="email:sifrerdoo@gmail.com">sifrerdoo@gmail.com</a>
                         </div>
@@ -264,12 +299,12 @@
                         <div class="footer-icon-wrapper">
                             <i class="material-icons">access_time</i> Pon - Pet: 7:00 - 15:00
                         </div>
-                    </p>
+                    </div>
                 </div>
 
                 <div class="col m3">
                     <div class="small-logo">
-                        <img alt="Šifrer d.o.o." src="images/logo.png">
+                        <img alt="Šifrer, d.o.o." src="images/logo.png">
                     </div>
                 </div>
             </div>  
@@ -280,8 +315,7 @@
     <script src="js/jquery.fancybox.min.js"></script>
     <script src="js/materialize.min.js"></script>
 
-    <script type="text/javascript">
-
+    <script>
         $(document).ready(function(){
             $('.parallax').parallax();
 
